--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -91,6 +91,7 @@ header .header_logo {
 }
 .exploration_button:hover {
   opacity: 0.85;
+  box-shadow: 0 4px 12px rgb(0, 0, 0);
 }
 
 /* MENU RESTAURANTS */
@@ -107,6 +108,7 @@ header .header_logo {
 }
 .menu_button:hover {
   opacity: 0.85;
+  box-shadow: 0 4px 12px rgb(0, 0, 0);
 }
 
 /* ICON HEADER */
