--- a/sass/composants/_button.scss
+++ b/sass/composants/_button.scss
@@ -8,6 +8,7 @@
 
     &:hover {
         opacity: 0.85;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 1)
     }
     
 }
@@ -22,5 +23,6 @@
 
     &:hover {
         opacity: 0.85;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 1)
     }
 }
